tests/baselines/reference/noCollisionThisExpressionInFunctionAndVarInGlobal(strict=true).errors.txt
noCollisionThisExpressionInFunctionAndVarInGlobal.ts(2,5): error TS7010: 'log', which lacks return-type annotation, implicitly has an 'any' return type.
noCollisionThisExpressionInFunctionAndVarInGlobal.ts(6,5): error TS7006: Parameter 'x' implicitly has an 'any' type.
noCollisionThisExpressionInFunctionAndVarInGlobal.ts(6,24): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== noCollisionThisExpressionInFunctionAndVarInGlobal.ts (3 errors) ====
    var console: {
        log(val: any);
        ~~~~~~~~~~~~~~
!!! error TS7010: 'log', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    var _this = 5;
    function x() {
        x => { console.log(this); };
        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                           ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }